default_json_view: remove "links"
